# S7_project

./: README.md
bba/simple_alg/: CMakeLists.txt  package.xml
bba/simple_alg/src/: algorithm1.cpp  test_publisher.cpp  test_subscriber.cpp
boundary/: CMakeLists.txt
controller/: controller_1.py
globlaplannerv2/: CMakeLists.txt  simple_alg.cpp
globlaplannerv2/src/: globalPlanner.py
grid/: griding.py
local_planner/: local_planner.cpp
matlab/plotIt/: beacon-based.txt  beacon-based_original.txt  coveredArea.m  plotAl.m  plotPathS.m  random.txt  random_original.txt  scriptArea.m  scriptFinalPlot.m  test24h.txt  vertical.txt  vertical_original.txt
worlds/: plainworld1.wbt  plainworld2.wbt  plainworld3.wbt  plainworld4.wbt  plainworld5.wbt  plainworld6.wbt
